[package]
name = "workload-identity-is-up"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[[bin]]
name = "wi-is-up"
path = "src/bin/main.rs"

[dependencies]
hyper = { version = "0.14.15", features = ["client","runtime","http1"] }
tokio = { version = "1", features = ["rt","net","time","macros"] }
anyhow = "1.0"
clap = "2.33.3"
